vert align fix about

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body{
     width: 700px;
     line-height: 1.3;
     font-size: 18px;
+    vertical-align: top;
 }
 
 .prjs{
